# skyrim-template-hello

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: Events.h
include/Settings/: FormLoader.h
mod/: README.md
src/: main.cpp
src/include/: Events.h  FormLoader.h
